# gst-auto-launch

./: AUTHORS  Makefile.am  README  autogen.sh  configure.ac  convert-pipelines-from-py-to-xml.py
src/: Makefile.am  Makefile.in  auto-pipeline.c  auto-pipeline.vala  command.c  command.vala  commands.c  commands.vala  config-parser.c  config-parser.vala  gst-auto-launch.c  gst-auto-launch.vala  object-list.c  object-list.vala  pipelines.xml  task-scanner.c  task-scanner.vala  task.c  task.vala  xml-parser.c  xml-parser.vala
